fix button alignment and minor styling

--- a/assets/style.css
+++ b/assets/style.css
@@ -20,7 +20,7 @@ p {
 #wrapper {
     background-color: white;
     position: absolute;
-    left: 30%;
+    left: 33%;
     top: 20%;
     width: 500px;
     height: 500px;
@@ -41,6 +41,11 @@ p {
     float: right;
 }
 
+.btns {
+    display: flex;
+    justify-content: center;
+}
+
 #goBack {
     background-color: #1e93c9;
     position: relative;
@@ -48,10 +53,15 @@ p {
     font-size: 20px;
     color: white;
     top: 30%;
-    left: 55%;
-    width: auto;
+    flex: none;
     text-align: center;
     text-decoration: none;
+    justify-content: center;
+    margin: 5px;
+}
+
+#goBack:hover {
+    background-color: #13e3ff;
 }
 
 #clear {
@@ -61,14 +71,19 @@ p {
     font-size: 20px;
     color: white;
     top: 30%;
-    right: 5%;
+    flex: none;
     text-align: center;
+    justify-content: center;
+    margin: 5px;
+}
+
+#clear:hover {
+    background-color: darkred;
 }
 
 button {
     border-radius: 8px;
-    flex: auto;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 textarea {
@@ -98,6 +113,10 @@ h1 {
     font-size: 40pt;
 }
 
+#scoreTitle {
+    font-style: italic;
+}
+
 li {
     background-color: #1e93c9;
     margin-top: 10px;
@@ -120,31 +139,4 @@ li {
     font-style: italic;
 }
 
-/* A Media Query max-width: 786px */
-@media screen and (max-width: 786px) {
-/* Resized content to fit 786px  */
-    body {
-        max-width: 786px;
-    }
-    /* Resized main-content to fit 786px  */
-    #wrapper {
-    position: absolute;
-    left: 20%;
-    }
 
-    a {
-    margin-left: 20%;
-    }
-    #goBack {
-        
-        position: relative;
-        left: 55%;
-    }
-
-    #clear {
-        
-        position: relative;
-        right: 5%;
-        
-    }
-}
